--- a/2_term_Software_engineering/OPD/test_pages/lab2/visual.html
+++ b/2_term_Software_engineering/OPD/test_pages/lab2/visual.html
@@ -43,72 +43,72 @@
         const tries = document.getElementById("tries");
         let startTime;
         let remainingTries = 5;
-        const audioFiles = {};
-        for (let i = 0; i < 100; i++) {
-            audioFiles[i] = new Audio(`${i}.mp3`);
-        }
+        
+    function getRandomInt(min, max) {
+        min = Math.ceil(min);
+        max = Math.floor(max);
+        return Math.floor(Math.random() * (max - min + 1)) + min;
+    }
 
-        function getRandomInt(min, max) {
-            min = Math.ceil(min);
-            max = Math.floor(max);
-            return Math.floor(Math.random() * (max - min + 1)) + min;
-        }
+    function askQuestion() {
+        const firstNum = getRandomInt(1, 100);
+        const secondNum = getRandomInt(1, 100);
+        const operation = "+";
+        question.textContent = `${firstNum} ${operation} ${secondNum}`;
+        startTime = new Date().getTime();
+    }
 
-        function askQuestion() {
-            const firstNum = getRandomInt(1, 100);
-            const secondNum = getRandomInt(1, 100);
-            const operation = "+";
-            audioFiles[firstNum].play();
-            audioFiles[operation].play();
-            audioFiles[secondNum].play();
-            startTime = new Date().getTime();
-        }
-
-        function checkAnswer(isEven) {
-            const answer = eval(question.textContent);
-            const isCorrect = isEven ? answer % 2 === 0 : answer % 2 !== 0;
-            const endTime = new Date().getTime();
-            const responseTime = endTime - startTime;
-            if (isCorrect) {
-                result.textContent = `Верно! Время ответа: ${responseTime} мс.`;
-                remainingTries--;
-                tries.textContent = remainingTries;
-                if (remainingTries === 0) {
-                    evenButton.disabled = true;
-                    oddButton.disabled = true;
-                    result.textContent += " Игра окончена.";
-                } else {
-                    askQuestion();
-                }
+    function checkAnswer(isEven) {
+        const answer = eval(question.textContent);
+        const isCorrect = isEven ? answer % 2 === 0 : answer % 2 !== 0;
+        const endTime = new Date().getTime();
+        const responseTime = endTime - startTime - 50;
+        if (isCorrect) {
+            result.textContent = `Верно! Время ответа: ${responseTime} мс.`;
+            remainingTries--;
+            tries.textContent = remainingTries;
+            if (remainingTries === 0) {
+                evenButton.disabled = true;
+                oddButton.disabled = true;
+                startButton.disabled = false;
+                result.textContent += " Игра окончена.";
             } else {
-                result.textContent = `Неверно! Время ответа: ${responseTime} мс.`;
-                remainingTries--;
-                tries.textContent = remainingTries;
-                if (remainingTries === 0) {
-                    evenButton.disabled = true;
-                    oddButton.disabled = true;
-                    result.textContent += " Игра окончена.";
-                } else {
-                    askQuestion();
-                }
+                askQuestion();
+            }
+        } else {
+            result.textContent = `Неверно! Время ответа: ${responseTime} мс.`;
+            remainingTries--;
+            tries.textContent = remainingTries;
+            if (remainingTries === 0) {
+                evenButton.disabled = true;
+                oddButton.disabled = true;
+                startButton.disabled = false;
+                result.textContent += " Игра окончена.";
+            } else {
+                askQuestion();
             }
         }
+    }
 
-        startButton.addEventListener("click", () => {
-            askQuestion();
-            startButton.disabled = true;
-            evenButton.disabled = false;
-            oddButton.disabled = false;
-            result.textContent = "";
-        });
+    startButton.addEventListener("click", () => {
+        remainingTries = 5;
+        askQuestion();
+        startButton.disabled = true;
+        evenButton.disabled = false;
+        oddButton.disabled = false;
+        result.textContent = "";
+        tries.textContent = remainingTries;
+    });
 
-        evenButton.addEventListener("click", () => {
+    document.addEventListener("keydown", (event) => {
+        if (event.code === "KeyW") {
+            startButton.click();
+        } else if (event.code === "KeyA" && !evenButton.disabled) {
             checkAnswer(true);
-        });
-
-        oddButton.addEventListener("click", () => {
+        } else if (event.code === "KeyD" && !oddButton.disabled) {
             checkAnswer(false);
-        });
+        }
+    });
     </script>
 </body>
 </html>
