lab2 color tests

--- a/2_term_Software_engineering/OPD/test_pages/lab2/hard_sound.html
+++ b/2_term_Software_engineering/OPD/test_pages/lab2/hard_sound.html
@@ -131,7 +131,7 @@
         });
 
         document.addEventListener("keydown", (event) => {
-            if (event.code === "KeyW") {
+            if (event.code === "KeyS") {
                 startButton.click();
             } else if (event.code === "KeyA" && !evenButton.disabled) {
                 checkAnswer(true);
