--- a/2_term_Software_engineering/OPD/test_pages/lab2/visual.html
+++ b/2_term_Software_engineering/OPD/test_pages/lab2/visual.html
@@ -101,7 +101,7 @@
     });
 
     document.addEventListener("keydown", (event) => {
-        if (event.code === "KeyW") {
+        if (event.code === "KeyS") {
             startButton.click();
         } else if (event.code === "KeyA" && !evenButton.disabled) {
             checkAnswer(true);
