--- a/2_term_Software_engineering/OPD/test_pages/lab3/simple_circle.html
+++ b/2_term_Software_engineering/OPD/test_pages/lab3/simple_circle.html
@@ -28,8 +28,8 @@
 	}
 	
 	#circle:hover{
-	cursor:pointer;
-	cursor:hand;
+		cursor:pointer;
+		cursor:hand;
 	}
 	
 	.hidden {
@@ -37,23 +37,23 @@
 	visibility: hidden;
 	}
 	
-	#retry{
-	text-align: center;
-	margin: 2em auto;
-	line-height: 1em;
-	font-size: 2.5em;
-	font-family: "Lato", sans-serif;
-	font-weight: 100;
-	color: #fefefe;
-	text-transform: uppercase;
-	background-color: #222;
-	transition: all 0.5s ease;
+	#end{
+		text-align: center;
+		margin: 2em auto;
+		line-height: 1em;
+		font-size: 2.5em;
+		font-family: "Lato", sans-serif;
+		font-weight: 100;
+		color: #fefefe;
+		text-transform: uppercase;
+		background-color: #222;
+		transition: all 0.5s ease;
 	}
 	
-	#retry:hover{
-	color: #2ecc71;
-	cursor: pointer;
-	cursor: hand;
+	#end:hover{
+		color: #2ecc71;
+		cursor: pointer;
+		cursor: hand;
 	}
 	
 	#circle2 {
@@ -62,8 +62,20 @@
 	border-radius: 50%;
 	margin: 0 auto;
 	border: 2px solid #fefefe;
+	position: relative;
 	}
-	
+
+	#time {
+	position: absolute;
+	top: -2em;
+	left: 50%;
+	transform: translateX(-50%);
+	font-size: 1.5em;
+	font-family: "Lato", sans-serif;
+	font-weight: 100;
+	color: #fefefe;
+	}
+
 	#pointer {
 	height: 1.5em;
 	width: 12px;
@@ -106,10 +118,66 @@
 	@keyframes pulse{
 	0% {   box-shadow: 0 0 0 1pt #2ecc71; }
 	50% {  box-shadow: 0 0 0 2.5pt #2ecc71;}
-}
+	}
+	input[type="number"] {
+		width: 2em;
+		font-size: 0.5em;
+		padding: 0.2em;
+		margin-right: 0.1em;
+		border-radius: 4px;
+		border: none;
+		background-color: #fefefe;
+		color: #222;
+		box-shadow: 2px 2px 5px rgb(0 0 0 / 20%);
+	}
+	#time-input {
+		text-align: center;
+		line-height: 1em;
+		font-size: 3em;
+		font-family: "Lato", sans-serif;
+		font-weight: 100;
+		color: #fefefe;
+	}
+	#start {
+		text-align: center;
+		margin: 0.5em auto;
+		line-height: 1em;
+		font-size: 1.5em;
+		font-family: "Lato", sans-serif;
+		font-weight: 100;
+		color: #fefefe;
+		text-transform: uppercase;
+		background-color: #222;
+		transition: all 0.5s ease;
+		border: none;
+	}
+	
+	#start:hover {
+		color: #2ecc71;
+		cursor: pointer;
+		cursor: hand;
+	}
+
+	#user-result {
+		text-align: center;
+		line-height: 4em;
+		font-size: 2em;
+		font-family: "Lato", sans-serif;
+		font-weight: 100;
+		color: #fefefe;
+	}
+
+
 </style>
 </head>
 <body>
+	<div id="time-input">
+		Enter time: <input type="number" id="minutes" min="0" max="45"> minutes
+		<input type="number" id="seconds" min="0" max="59"> seconds
+	</div>
+	<div id="start">
+		<button id="start">Start</button>
+	</div>
 	<div id="container">
 		<div id="circle2">
 		<div class="point"></div>
@@ -119,13 +187,9 @@
 		<div id="pointer"></div>
 		</div>
 	</div>
-	<div id="retry" class="hidden">game over</div>
-	<p>Result: <span id="result"></span></p>
-	<p>
-		Time: <input type="number" id="minutes" min="0" max="59"> minutes
-		<input type="number" id="seconds" min="0" max="59"> seconds
-		<button id="start">Start</button>
-	</p>
+	<div id="end" class="hidden">game over</div>
+	<div id="user-result">Result: <span id="result"></span></div>
+
 	
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script>  
@@ -134,10 +198,11 @@
 
 	var startButton = document.getElementById("start");
 	var buttonPressed = false;
-
-	const minSpeed = 2500; // минимальная скорость вращения
+	var tm
+	const minSpeed = 2000; // минимальная скорость вращения
 	const maxSpeed = 5000; // максимальная скорость вращения
-	$("#container > p").html("<br><h4>Time left: <span id='timer'></span></h4>");
+	$("#container > p").html("<br><h4> <span id='timer'>00:00</span></h4>");
+	$("#result").text("NaN");
 	var interval
 	// Получить текущий угол поворота
 	(function($) {
@@ -176,7 +241,10 @@ function updateTimer(timeLeft) {
 	var timer = setInterval(function() {
 		timeLeft--;
 		if (timeLeft >= 0) {
-			$("#timer").text(timeLeft);
+			var minutes = Math.floor(timeLeft / 60);
+            var seconds = timeLeft % 60;
+            var timeString = ('0' + minutes).slice(-2) + ':' + ('0' + seconds).slice(-2); // форматировать время в виде "мм:сс"
+            $("#timer").text(timeString);
 		} else {
 			clearInterval(timer);
 			endGame();
@@ -188,15 +256,18 @@ function updateTimer(timeLeft) {
 function startGame() {
 	var minutes = parseInt($("#minutes").val());
 	var seconds = parseInt($("#seconds").val());
-	if (isNaN(minutes) || isNaN(seconds)) {
-		alert("Please enter valid time.");
+	if ((isNaN(minutes) || isNaN(seconds)) || (minutes < 2) || (minutes > 45) || (seconds < 0) || (seconds > 59)) {
+		alert("Введите время от 2 до 45 минут.");
+		buttonPressed = false;
 		return;
 	}
 	startButton.disabled = true;
+	buttonPressed = true;
 	inaccuracy = 0
 	rotatePoint()
 	var timeLeft = minutes * 60 + seconds;
-	$("#container > p").html("<br><h4>Time left: <span id='timer'>" + timeLeft + "</span> seconds</h4>");
+	var timeString = ('0' + minutes).slice(-2) + ':' + ('0' + seconds).slice(-2); // форматировать время в виде "мм:сс"
+	$("#timer").text(timeString);
 	updateTimer(timeLeft);
 	$("#circle").rotate(rotationSpeed); // установить начальную скорость вращения
 
@@ -210,55 +281,72 @@ function endGame() {
 	$("#retry").removeClass("hidden");
 }
 
+function checkTime() {
+	setTimeout(function() {
+		if (!pressed) {
+			$("#result").text("Miss");
+			inaccuracy -= 30
+			rotatePoint()
+		} else { 
+			pressed = false
+			clearTimeout();
+			return
+		}
+  }, tm);
+}
+
 function rotatePoint() {
 	var speed = Math.floor(Math.random() * (maxSpeed - minSpeed + 1)) + minSpeed + inaccuracy;
 	$("#circle").rotate(speed);
+	tm = (6000 / (speed - inaccuracy)) * 1000
 	inaccuracy += 360
-	// генерировать новую случайную скорость вращения между minSpeed и maxSpeed
+	checkTime()	
 }
 
 
 function checkAnswer(){
 	var angle = $("#circle2").rotationDegrees();
-			var unghi = $("#circle").rotationDegrees();
-			if (unghi < angle + 30 && unghi > 0) {
-				$("#result").text("+");
+	var unghi = $("#circle").rotationDegrees();
+	if (unghi < angle + 30 && unghi > 0) {
+		$("#result").text("+");
+		inaccuracy -= unghi
+		rotatePoint()
+		// Попадание -
+	} else {
+		if (unghi > angle - 30 && unghi < 0) {
+			$("#result").text("-");
+			inaccuracy -= unghi
+			rotatePoint()
+			// Попадание +
+		} else {
+			if (unghi === 0) {
+				$("#result").text("HIT!");
 				rotatePoint()
-				// Попадание -
+				// Попадание 100%
 			} else {
-				if (unghi >= angle - 30 && unghi < 0) {
-					$("#result").text("-");
-					rotatePoint()
-					// Попадание +
-				} else {
-					inaccuracy -= unghi
-					// Мимо
-					$("#result").text("Miss");
-				}
-			}
+			inaccuracy -= unghi
+			// Мимо
+			$("#result").text("Miss");
+			rotatePoint()
 		}
+	}
+	}
+}
 
-//--------------
+startButton.addEventListener("click", () => {
+	startGame();
+});
 
-
-        startButton.addEventListener("click", () => {
-			startGame();
-        });
-
-        document.addEventListener("keydown", (event) => {
-        if (event.code === "KeyS") {
-            buttonPressed = true;
-            startButton.click();
-        }
-        else if (event.code === "KeyW" && buttonPressed) {
-            checkAnswer();
-        }
-        });
-
-
-
-
-
+document.addEventListener("keydown", (event) => {
+if (event.code === "KeyS" && !buttonPressed) {
+	pressed = false
+	startButton.click();
+}
+else if (event.code === "KeyW" && buttonPressed) {
+	pressed = true
+	checkAnswer();
+}
+});
 </script>
 </body>
 </html>
