--- a/2_term_Software_engineering/OPD/test_pages/lab4/slezh.html
+++ b/2_term_Software_engineering/OPD/test_pages/lab4/slezh.html
@@ -2,47 +2,121 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Полоска с двигающимся кругом</title>
+    <title>Круг, перемещающийся по полоске</title>
     <style>
-      #strip {
+      #container {
+        width: 10cm;
+        height: 0.5cm;
+        background-color: gray;
         position: relative;
-        height: 10px;
-        background-color: black;
       }
+
       #circle {
-        position: absolute;
-        top: -5px;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 20px;
-        height: 20px;
+        width: 1cm;
+        height: 1cm;
         border-radius: 50%;
         background-color: red;
-        animation: move 2s linear forwards;
+        position: absolute;
+        top: -0.25cm;
+        left: 50%;
+        transform: translateX(-50%);
+        transition: left 0.1s ease-out, background-color 0.5s;
       }
-      @keyframes move {
-        0% {
-          left: 50%;
-        }
-        50% {
-          left: 30%;
-        }
-        100% {
-          left: 30%;
-        }
+
+      #circle.returning {
+        background-color: green;
       }
     </style>
   </head>
   <body>
-    <div id="strip"></div>
-    <div id="circle"></div>
+    <div id="container">
+      <div id="circle"></div>
+    </div>
+    <div id="message"></div>
+
     <script>
-      const circle = document.getElementById("circle");
-      circle.addEventListener("animationend", () => {
-        circle.style.animation = "none";
-      });
-      const direction = Math.random() < 0.5 ? "left" : "right";
-      circle.style.animationDirection = direction;
+      const circle = document.querySelector('#circle');
+      const containerWidth = document.querySelector('#container').offsetWidth;
+      const circleWidth = circle.offsetWidth;
+      let isMoving = false;
+      let isDragging = false;
+      const message = document.querySelector('#message');
+      let returnStartTime;
+
+      function moveCircle() {
+        if (!isMoving && !isDragging) {
+          let leftPosition;
+          let distanceFromCenter;
+          do {
+            const randomPosition = Math.random();
+            leftPosition = randomPosition * (containerWidth - circleWidth);
+            const containerCenter = containerWidth / 2;
+            const circleCenter = leftPosition + circleWidth / 2;
+            distanceFromCenter = Math.abs(containerCenter - circleCenter);
+          } while (distanceFromCenter < 100);
+          circle.style.left = leftPosition + 'px';
+          isMoving = true;
+          returnStartTime = Date.now();
+        }
+      }
+
+      function startDragging(event) {
+        if (event.button === 0) {
+          isDragging = true;
+        }
+        isMoving = false;
+      }
+
+      function dragCircle(event) {
+        if (isDragging) {
+          const containerCenter = containerWidth / 2;
+          const circleLeft = parseInt(circle.style.left) || 0;
+          const mouseX = event.clientX;
+          const circleX = mouseX - circleWidth / 2;
+          const distanceFromCenter = Math.abs(containerCenter - circleX);
+
+          circle.style.left = circleX + 'px';
+          isMoving = true;
+        }
+      }
+
+      function stopDragging(event) {
+        if (event.button === 0) {
+          isDragging = false;
+          if (isMoving) {
+            circle.classList.add('returning');
+            let circlePosition = circle.getBoundingClientRect();
+            const containerCenter = containerWidth / 2;
+            let leftPosition = circlePosition.left - containerCenter;
+            const step = 10;
+            const interval = setInterval(() => {
+              if (leftPosition > 0) {
+                leftPosition = Math.max(leftPosition - step, 0);
+                circle.style.left = (containerCenter + leftPosition) + 'px';
+              } else if (leftPosition < 0) {
+                leftPosition = Math.min(leftPosition + step, 0);
+                circle.style.left = (containerCenter + leftPosition) + 'px';
+              } else {
+                clearInterval(interval);
+                circle.classList.remove('returning');
+                isMoving = false;
+                const returnTime = Date.now() - returnStartTime;
+                message.textContent = `Круг вернулся в центр за ${returnTime} мс`;
+              }
+            }, 10);
+          }
+        }
+      }
+
+      circle.addEventListener('mousedown', startDragging);
+      document.addEventListener('mousemove', dragCircle);
+      document.addEventListener('mouseup', stopDragging);
+
+      setInterval(moveCircle, 3000);
+
+
+
+
     </script>
   </body>
 </html>
